<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoe"
            type="com.udacity1.shoestoreinventoryapp.model.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:text="@string/company"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@{shoe.company}"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/textView8"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/new_balance" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:text="@string/name"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{shoe.name}"
            app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/textCompany"
            app:layout_constraintTop_toTopOf="@+id/textView9"
            tools:text="@string/fit_balance" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:text="@string/size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{Double.toString(shoe.size)}"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="@+id/textName"
            app:layout_constraintTop_toTopOf="@+id/textView10"
            tools:text="@string/_40" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:text="@string/description"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{shoe.description}"
            app:layout_constraintBottom_toBottomOf="@+id/textView11"
            app:layout_constraintStart_toStartOf="@+id/textSize"
            app:layout_constraintTop_toTopOf="@+id/textView11"
            tools:text="@string/soft_landing_for_heel_strikers" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>