<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoe"
            type="com.udacity1.shoestoreinventoryapp.model.Shoe" />

        <variable
            name="sharedViewModel"
            type="com.udacity1.shoestoreinventoryapp.viewmodel.SharedViewModel" />

        <!--
        <variable
            name="Converter"
            type="com.udacity1.shoestoreinventoryapp.viewmodel.Converter" />
            -->

    </data>

    <!-- ConstraintLayout more flexibility and is easier to use in the Layout Editor  -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="52dp"
            android:text="@string/company"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/editTextCompany"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextCompany"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/new_balance"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={shoe.company}"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.476"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:text="@string/name"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/fit_balance"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={shoe.name}"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:text="@string/size"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <!--  Using dataBinding converter Doesn't work  -->
        <!--  android:text="@={Converter.doubleToString(shoe.size)}"  -->
        <!--  android:text="@{String.format(shoe.size)}" -->

        <EditText
            android:id="@+id/editTextSize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/_40"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:text="@={`` + shoe.size}"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:text="@string/description"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/soft_landing_for_heel_strikers"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={shoe.description}"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.571"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/save_bt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:onClick="@{(view) -> sharedViewModel.addShoe(view,shoe)}"
            android:text="@string/save"
            app:layout_constraintBottom_toTopOf="@+id/cancel_bt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/cancel_bt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="70dp"
            android:onClick="@{(view) -> sharedViewModel.navigateUp(view)}"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>